2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed 'Bug 430512 - Editor
	  forcefully reformats my code incorrectly'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextViewMargin.cs:
	  fixed 'Bug 424443 - Many cursors shown when pressing the Down key
	  for a while'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: fixed 'Bug 429738 - Middle-click paste
	  past end of row pastes in next line'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor.Tests,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/DocumentTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/LineSplitterTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/UndoRedoTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SearchTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SelectionTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/SelectionSelectAllTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/RemoveTabTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/CaretMoveTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertNewLineTests.cs:
	  Moved text editor unit tests.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Handled tooltip provider exception, to
	  prevent a text editor crash.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor.mdp: Updated projects.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Fix crash caused by the