@@ -85,6 +85,9 @@
     <File name="Styles/VisualStudioStyle.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" resource_id="gui.stetic" />
     <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mono.TextEditor/IWordFindStrategy.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mono.TextEditor/EmacsWordFindStrategy.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mono.TextEditor/SharpDevelopWordFindStrategy.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
